añadiendo archivo css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <h1>JAVIERA TAPIA</h1>
+        <div class="header-title">JAVIERA TAPIA</div>
         <nav>
             <ul>
                 <li>PORTFOLIO</li>
