agragando estilos a header

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Título-->
     <title>Freelancer Portfolio</title>
+    <!--CSS-->
+    <link rel="stylesheet" href="style.css">
+    <!--Font Lato-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inder&display=swap" rel="stylesheet">
+    <!--Font Montserrat-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inder&family=Montserrat:wght@600&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
