--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,13 @@
             </ul>
         </nav>
     </header>
-    <section data-name="Home">
+    <section data-name="Home" class="home">
         <h1>JAVIERA TAPIA</h1>
         <h4>Web Developer-Graphic Artist-User Expirience Designer</h4>
     </section>
-    <section data-name="Portfolio">PORTFOLIO</section>
-    <section data-name="About">ABOUT</section>
-    <section data-name="Contact me">CONTACT ME</section>
+    <section data-name="Portfolio" class="portfolio">PORTFOLIO</section>
+    <section data-name="About" class="about">ABOUT</section>
+    <section data-name="Contact-me" class="contact-me">CONTACT ME</section>
     <footer>
         <div>LOCATION</div>
         <div>AROUND THE WEB</div>
