agregando estilos a home

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,10 @@
         </nav>
     </header>
     <section data-name="Home" class="home">
-        <h1>JAVIERA TAPIA</h1>
-        <h4>Web Developer-Graphic Artist-User Expirience Designer</h4>
+        <img src="../img/profile.png" alt="profile image" width="250px">
+        <h1 class="home-title">JAVIERA TAPIA</h1>
+        <h2>__________⭐__________</h2>
+        <h2>Web Developer-Graphic Artist-User Expirience Designer</h2>
     </section>
     <section data-name="Portfolio" class="portfolio">PORTFOLIO</section>
     <section data-name="About" class="about">ABOUT</section>
