agregando estilos a sección proyectos y about

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,47 @@
         <h2>__________⭐__________</h2>
         <h2>Web Developer-Graphic Artist-User Expirience Designer</h2>
     </section>
-    <section data-name="Portfolio" class="portfolio">PORTFOLIO</section>
-    <section data-name="About" class="about">ABOUT</section>
-    <section data-name="Contact-me" class="contact-me">CONTACT ME</section>
+    <section data-name="Portfolio" class="portfolio">
+        <h1 class="section-title">PORTFOLIO</h1>
+        <h2>__________⭐__________</h2>
+        <div class="proyects-container">
+            <img src="../img/cabin.png" alt="proyect 1" class="proyect-img">
+            <img src="../img/cake.png" alt="proyect 2" class="proyect-img">
+            <img src="../img/circus.png" alt="proyect 3" class="proyect-img">
+            <img src="../img/game.png" alt="proyect 4" class="proyect-img">
+            <img src="../img/safe.png" alt="proyect 5" class="proyect-img">
+            <img src="../img/submarine.png" alt="proyect 6" class="proyect-img">
+
+        </div>
+
+    </section>
+    <section data-name="About" class="about">
+        <h1 class="section-title">ABOUT</h1>
+        <h2>__________⭐__________</h2>
+        <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquam adipisci alias,
+            totam velit molestiae minus debitis architecto saepe itaque a quas quam. Error nostrum officia aut esse
+            omnis nisi sequi vitae neque fugit asperiores deleniti nesciunt ex, voluptas voluptates odit tempora
+            adipisci ipsum dolorum tempore magnam. Accusamus optio voluptates, illum nemo adipisci harum? Veniam tenetur
+            impedit quo dicta sapiente.</p>
+    </section>
+    <section data-name="Contact-me" class="contact-me">
+        <h1 class="section-title">CONTACT ME</h1>
+        <h2>__________⭐__________</h2>
+        <form class="contact-form">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" class="contact-input">
+
+            <label for="email">Email Address</label>
+            <input type="email" name="email" id="email" class="contact-input">
+
+            <label for="phone">Phone Number</label>
+            <input type="tel" name="phone" id="phone" class="contact-input">
+
+            <label for="message">Message</label>
+            <textarea name="message" id="message" cols="30" rows="10" class="contact-textarea"></textarea>
+            
+        </form>
+    </section>
     <footer>
         <div>LOCATION</div>
         <div>AROUND THE WEB</div>
