terminando estilos de formulario de contacto y footer

--- a/src/index.html
+++ b/src/index.html
@@ -26,22 +26,22 @@
 
 <body>
     <header>
-        <div class="header-title">JAVIERA TAPIA</div>
+        <div class="header-title"><a href="#home">JAVIERA TAPIA</a></div>
         <nav>
             <ul>
-                <li>PORTFOLIO</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#contact-me">CONTACT</a></li>
             </ul>
         </nav>
     </header>
-    <section data-name="Home" class="home">
+    <section data-name="Home" class="home" id="home">
         <img src="../img/profile.png" alt="profile image" width="250px">
         <h1 class="home-title">JAVIERA TAPIA</h1>
         <h2>__________⭐__________</h2>
         <h2>Web Developer-Graphic Artist-User Expirience Designer</h2>
     </section>
-    <section data-name="Portfolio" class="portfolio">
+    <section data-name="Portfolio" class="portfolio" id="portfolio">
         <h1 class="section-title">PORTFOLIO</h1>
         <h2>__________⭐__________</h2>
         <div class="proyects-container">
@@ -55,7 +55,7 @@
         </div>
 
     </section>
-    <section data-name="About" class="about">
+    <section data-name="About" class="about" id="about">
         <h1 class="section-title">ABOUT</h1>
         <h2>__________⭐__________</h2>
         <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquam adipisci alias,
@@ -64,7 +64,7 @@
             adipisci ipsum dolorum tempore magnam. Accusamus optio voluptates, illum nemo adipisci harum? Veniam tenetur
             impedit quo dicta sapiente.</p>
     </section>
-    <section data-name="Contact-me" class="contact-me">
+    <section data-name="Contact-me" class="contact-me" id="contact-me">
         <h1 class="section-title">CONTACT ME</h1>
         <h2>__________⭐__________</h2>
         <form class="contact-form">
@@ -83,8 +83,8 @@
         </form>
     </section>
     <footer>
-        <div>LOCATION</div>
-        <div>AROUND THE WEB</div>
+        <div class="footer-info">LOCATION</div>
+        <div class="footer-info">AROUND THE WEB</div>
     </footer>
 </body>
 
