agregando boton y estilos

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         <h1 class="section-title">PORTFOLIO</h1>
         <h2>__________⭐__________</h2>
         <div class="proyects-container">
-            <img src="../img/cabin.png" alt="proyect 1" class="proyect-img">
-            <img src="../img/cake.png" alt="proyect 2" class="proyect-img">
-            <img src="../img/circus.png" alt="proyect 3" class="proyect-img">
-            <img src="../img/game.png" alt="proyect 4" class="proyect-img">
-            <img src="../img/safe.png" alt="proyect 5" class="proyect-img">
-            <img src="../img/submarine.png" alt="proyect 6" class="proyect-img">
+            <img src="./img/cabin.png" alt="proyect 1" class="proyect-img">
+            <img src="./img/cake.png" alt="proyect 2" class="proyect-img">
+            <img src="./img/circus.png" alt="proyect 3" class="proyect-img">
+            <img src="./img/game.png" alt="proyect 4" class="proyect-img">
+            <img src="./img/safe.png" alt="proyect 5" class="proyect-img">
+            <img src="./img/submarine.png" alt="proyect 6" class="proyect-img">
 
         </div>
 
@@ -79,6 +79,8 @@
 
             <label for="message">Message</label>
             <textarea name="message" id="message" cols="30" rows="10" class="contact-textarea"></textarea>
+
+            <button>Send</button>
             
         </form>
     </section>
