corrigiendo src profile img

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <section data-name="Home" class="home" id="home">
-        <img src="../img/profile.png" alt="profile image" width="250px">
+        <img src="./img/profile.png" alt="profile image" width="250px">
         <h1 class="home-title">JAVIERA TAPIA</h1>
         <h2>__________⭐__________</h2>
         <h2>Web Developer-Graphic Artist-User Expirience Designer</h2>
